fix projects size on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,14 @@ section {
 .container {
   padding: 2px 16px;
 }
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
